--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -5,14 +5,14 @@
     <title>Resumen</title>
 <!--    <link rel="stylesheet" th:href="@{css/estilos.css}">-->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-<!--    <script th:src="@{/js/script.js}"></script>-->
+
 </head>
 <body>
 
 
 <h2>Resumen</h2>
 
-<form action="" method="post">
+<form th:action="@{/empleados/registro-finales}" method="post">
 
 <!--    <div th:replace="~{fragments/navbar :: navbar}"></div>-->
     <h2>Empleado</h2>
@@ -38,11 +38,19 @@
     <p>Banco: <span th:text="${datos.cuentaCorriente.banco}"></span></p>
     <p>Cuenta Corriente: <span th:text="${datos.cuentaCorriente.cuentaCorriente}"></span></p>
 
+    <br>
 
+    <div>
+        <button type="submit" id="btn_guardar">Guardar Empleado</button>
+    </div>
 
 </form>
-<!--<a th:href="@{/logout}" class="btn">Volver al inicio</a>-->
+<!--<a th:href="@{/empleados/logout}" class="btn">Volver al inicio</a>-->
 
+
+<script th:if="${mensaje}" th:inline="javascript">
+    alert([[${mensaje}]]);
+</script>
 
 </body>
 </html>
