--- a/empleados/src/main/resources/templates/empleadoRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoRegistro.html
@@ -3,6 +3,9 @@
 <head>
   <title>Datos Empleado</title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" th:href="@{/css/estilos.css}">
+  <script th:src="@{/js/script.js}"></script>
+
 </head>
 <body>
 
@@ -20,33 +23,25 @@
 <form th:action="@{/empleados/registro-datos}" th:object="${empleadoRegistroDTO}" method="post">
   <label for="nombre">Nombre:</label>
   <input type="text" id="nombre" th:field="*{nombre}"  />
-  <ul>
-    <li th:each="err : ${#fields.errors('nombre')}" th:text="${err}" class="error"></li>
-  </ul>
+  <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="error"></div>
   <br><br>
 
   <label for="apellido">Apellido:</label>
   <input type="text" id="apellido" th:field="*{apellido}"  />
-  <ul>
-    <li th:each="err : ${#fields.errors('apellido')}" th:text="${err}" class="error"></li>
-  </ul>
+  <div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}" class="error"></div>
   <br><br>
 
   <label for="fechaNacimiento">Fecha de Nacimiento:</label>
   <input type="text" id="fechaNacimiento" th:field="*{fechaNacimiento}"  />
-  <ul>
-    <li th:each="err : ${#fields.errors('fechaNacimiento')}" th:text="${err}" class="error"></li>
-  </ul>
+  <div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}" class="error"></div>
   <br><br>
 
   <label for="email">Email:</label>
   <input type="text" id="email" th:field="*{email}"  />
-  <ul>
-    <li th:each="err : ${#fields.errors('email')}" th:text="${err}" class="error"></li>
-  </ul>
+  <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error"></div>
   <br><br>
 
-  <button type="submit">Enviar</button>
+  <button type="submit">Siguiente</button>
 </form>
 
 </body>
