--- a/comun/src/main/resources/static/css/estilos.css
+++ b/comun/src/main/resources/static/css/estilos.css
@@ -1,3 +1,46 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: Arial, sans-serif;
+    background-color: #f4f7f6;
+}
+
+.navbar{
+    /*position: absolute;*/
+    left: 0;
+    top: 0;
+    height: 100px;
+    /*background: #fff;*/
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    /*flex-direction: column;*/
+}
+
+
+nav ul li a img {
+    opacity: 0.5;
+    transition: opacity 0.3s ease-in-out;
+    width: 50px;
+    height: auto;
+    background: #fff;
+    box-shadow: 0 2px  rgba(0, 0, 0, 0.1);
+    border-radius: 10px 0 0 10px;
+    padding: 5px;
+
+}
+
+nav ul li a.active img {
+    opacity: 1;
+}
+
+/*Errores de Validaciones*/
 .error{
     color: red;
     font-weight: bold;
