--- a/empleados/src/main/resources/templates/empleadoDatosFinancieros.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinancieros.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
+<!--NavBar-->
+<div th:replace="~{fragments/navbar :: navbar}"></div>
+
 <h2>Formulario de Registro de Datos Financieros del Empleado</h2>
+
 <!-- Se muestra un mensaje de éxito si lo hay -->
 <div th:if="${param.success}">
     <p style="color: green;">¡Registro exitoso!</p>
@@ -18,7 +22,7 @@
     <p style="color: red;" th:text="${error}"></p>
 </div>
 
-<form th:action="@{/empleados/registro-financiero}" th:object="${empleadoRegistroDTO}" method="post">
+<form th:action="@{/empleados/registro-financiero}" th:object="${empleadoRegistroDTO}" method="post" id="formulario">
     <label for="banco">Banco:</label>
     <input type="text" id="banco" th:field="*{cuentaCorriente.banco}"  />
     <div th:if="${#fields.hasErrors('cuentaCorriente.banco')}" th:errors="*{cuentaCorriente.banco}" class="error"></div>
@@ -29,8 +33,18 @@
     <div th:if="${#fields.hasErrors('cuentaCorriente.cuentaCorriente')}" th:errors="*{cuentaCorriente.cuentaCorriente}" class="error"></div>
     <br><br>
 
-    <button type="submit">Siguiente</button>
+    <input type="button"
+           th:value="#{Boton.vaciar}"
+           onclick="vaciarFormulario()">
+    <br><br>
+
+<!--    <button type="submit">Siguiente</button>-->
+    <input type="submit"
+           th:value="#{Boton.siguiente}">
 </form>
+
+
+<script th:src="@{/js/script.js}"></script>
 
 </body>
 </html>
