--- a/empleados/src/main/resources/templates/empleadoDireccionRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoDireccionRegistro.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" th:href="@{/css/estilos.css}">
 </head>
 <body>
-<h1>Formulario de Dirección</h1>
 
+<!--NavBar-->
+<div th:replace="~{fragments/navbar :: navbar}"></div>
+
+<h1>Formulario de Dirección</h1>
+<!--Error del Servidor se muestran aquí cuando no salen en Logs-->
     <th:block th:text="${error}"/>
 
-<form th:action="@{/empleados/registro-direccion}" th:object="${empleadoRegistroDTO}" method="post">
-
+<form th:action="@{/empleados/registro-direccion}" th:object="${empleadoRegistroDTO}" method="post" id="formulario">
 
     <label for="tipoVia">Tipo de vía:</label>
     <input type="text" id="tipoVia" th:field="*{direccion.tipoVia}" />
@@ -59,8 +62,18 @@
     <div th:if="${#fields.hasErrors('direccion.pais')}" th:errors="*{direccion.pais}" class="error"></div>
     <br><br>
 
-    <button type="submit">Siguiente</button>
+    <input type="button"
+           th:value="#{Boton.vaciar}"
+           onclick="vaciarFormulario()">
+    <br><br>
+
+<!--    <button type="submit">Siguiente</button>-->
+    <input type="submit"
+           th:value="#{Boton.siguiente}">
 </form>
+
+
+<script th:src="@{/js/script.js}"></script>
 
 </body>
 </html>
