tweak: cambio de nombres en variables (#13)

--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -20,7 +20,7 @@
     <h2>Empleado</h2>
 
     <p>Nombre: <span th:text="${datos.nombre}"></span> </p>
-    <p>Apellido: <span th:text="${datos.apellido}"></span> </p>
+    <p>Apellidos: <span th:text="${datos.apellidos}"></span> </p>
     <p>Fecha de Nacimiento: <span th:text="${#temporals.format(datos.fechaNacimiento, 'dd/MM/yyyy')}"></span></p>
     <p>Email: <span th:text="${datos.email}"></span></p>
 
