--- a/empleados/src/main/resources/templates/empleadoRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoRegistro.html
@@ -29,9 +29,9 @@
   <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="error"></div>
   <br><br>
 
-  <label for="apellido">Apellido:</label>
-  <input type="text" id="apellido" th:field="*{apellido}"  />
-  <div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}" class="error"></div>
+  <label for="apellidos">Apellidos:</label>
+  <input type="text" id="apellidos" th:field="*{apellidos}"  />
+  <div th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}" class="error"></div>
   <br><br>
 
   <label for="fechaNacimiento">Fecha de Nacimiento:</label>
