--- a/empleados/src/main/resources/templates/detalleEmpleado.html
+++ b/empleados/src/main/resources/templates/detalleEmpleado.html
@@ -13,7 +13,7 @@
     <p><strong>Fecha de Alta en BD:</strong> <span th:text="${empleado.fechaAltaEnBaseDeDatos}"></span></p>
     -->
     <p><strong>Nombre:</strong> <span th:text="${empleado.nombre}"></span></p>
-    <p><strong>Apellido:</strong> <span th:text="${empleado.apellido}"></span></p>
+    <p><strong>Apellidos:</strong> <span th:text="${empleado.apellidos}"></span></p>
     <p><strong>Email:</strong> <span th:text="${empleado.email}"></span></p>
     <p><strong>Fecha de Nacimiento:</strong> <span th:text="${empleado.fechaNacimiento}"></span></p>
     <p><strong>Dirección:</strong></p>
