add: Ajuste de campos y adición entidades nuevas
+ Sólo esta hecha la estructura de BB.DD. Faltan repositorios y
  Servicios
+ Campos añadidos y retocados en Entidades prexistentes conforme a los
  nuevos enunciados recibidos en issue (#26)
+ Nuevas Entidades y campos añadidos en relación a los Datos Económicos
+ Model Mapper añadido a la espera de confirmación por los otros
  integrantes del equipo

--- a/empleados/src/main/resources/templates/empleadoRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoRegistro.html
@@ -34,6 +34,18 @@
   <div th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}" class="error"></div>
   <br><br>
 
+  <label>Género:</label><br>
+  <div th:each="genero : ${generos}">
+    <input type="radio"
+           th:field="*{genero}"
+           th:value="${genero.codigoGenero}"
+           th:id="${'genero_' + genero.codigoGenero}" />
+    <label th:for="${'genero_' + genero.codigoGenero}"
+           th:text="${genero.nombreGenero}"></label><br> <!-- Muestra el nombre del género -->
+  </div>
+
+
+
   <label for="fechaNacimiento">Fecha de Nacimiento:</label>
   <input type="text" id="fechaNacimiento" th:field="*{fechaNacimiento}"  />
   <div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}" class="error"></div>
