--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -5,7 +5,6 @@
     <title>Resumen</title>
     <link rel="stylesheet" th:href="@{/css/estilos.css}">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-
 </head>
 <body>
 
@@ -13,45 +12,38 @@
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <h2>Resumen de los Datos del Empleado</h2>
+<div th:if="${error != null}">
+    <p style="color: red;" th:text="${error}"></p>
+</div>
 
-<form th:action="@{/empleados/registro-finales}" method="post">
-
+<form th:action="@{/empleados/registro-finales}" method="post" th:object="${empleadoRegistroDTO}">
 
     <h2>Empleado</h2>
-
-    <p>Nombre: <span th:text="${datos.nombre}"></span> </p>
-    <p>Apellidos: <span th:text="${datos.apellidos}"></span> </p>
-    <p>Fecha de Nacimiento: <span th:text="${#temporals.format(datos.fechaNacimiento, 'dd/MM/yyyy')}"></span></p>
-    <p>Email: <span th:text="${datos.email}"></span></p>
+    <p th:text="'Nombre: ' + *{nombre}"></p>
+    <p th:text="'Apellidos: ' + *{apellidos}"></p>
+    <p th:text="'Género: ' + *{genero}"></p>
+    <p th:text="'Fecha de nacimiento: ' + *{fechaNacimiento}"></p>
 
     <h2>Dirección</h2>
-
-    <p>Tipo de Vía: <span th:text="${datos.direccion.tipoVia}"></span></p>
-    <p>Vía: <span th:text="${datos.direccion.via}"></span></p>
-    <p>Número: <span th:text="${datos.direccion.numero}"></span></p>
-    <p>Piso: <span th:text="${datos.direccion.piso}"></span></p>
-    <p>Puerta: <span th:text="${datos.direccion.puerta}"></span></p>
-    <p>Localidad: <span th:text="${datos.direccion.localidad}"></span></p>
-    <p>Código Postal: <span th:text="${datos.direccion.codigoPostal}"></span></p>
-    <p>Región: <span th:text="${datos.direccion.region}"></span></p>
-    <p>País: <span th:text="${datos.direccion.pais}"></span></p>
+    <p th:text="'Tipo de vía: ' + *{direccion.tipoVia}"></p>
+    <p th:text="'Nombre de vía: ' + *{direccion.via}"></p>
+    <p th:text="'Número de vía: ' + *{direccion.numero}"></p>
+    <p th:text="'Planta: ' + *{direccion.piso}"></p>
+    <p th:text="'Puerta: ' + *{direccion.puerta}"></p>
+    <p th:text="'Localidad: ' + *{direccion.localidad}"></p>
+    <p th:text="'Código postal: ' + *{direccion.codigoPostal}"></p>
+    <p th:text="'Región: ' + *{direccion.region}"></p>
+    <p th:text="'País: ' + *{direccion.pais}"></p>
 
     <h2>Datos Financieros</h2>
-
-    <p>Banco: <span th:text="${datos.cuentaCorriente.banco}"></span></p>
-    <p>Cuenta Corriente: <span th:text="${datos.cuentaCorriente.cuentaCorriente}"></span></p>
-
-    <br>
+    <p th:text="'Banco: ' + *{cuentaCorriente.banco}"></p>
+    <p th:text="'Cuenta Corriente: ' + *{cuentaCorriente.cuentaCorriente}"></p>
 
     <div>
-<!--        <button type="submit" id="btn_guardar">Guardar Empleado</button>-->
-        <input type="submit"
-               th:value="#{Boton.guardar}">
+        <input type="submit" th:value="#{Boton.guardar}">
     </div>
 
 </form>
-<!--<a th:href="@{/empleados/logout}" class="btn">Volver al inicio</a>-->
-
 
 <script th:if="${mensaje}" th:inline="javascript" >
     alert([[${mensaje}]]);
