--- a/empleados/src/main/resources/templates/areaPersonal.html
+++ b/empleados/src/main/resources/templates/areaPersonal.html
@@ -2,10 +2,10 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Información de Usuario</title>
+    <title>Área personal</title>
 </head>
 <body>
-<h1>Información del Usuario: <span th:text="${nombreUsuario}"></span></h1>
+<h1>Área personal: <span th:text="${email}"></span></h1>
 
 <div>
     <h2>Contadores de Autenticación</h2>
