add: Mejoras a autenticacion y registro por pasos
- Creacion de tabla para parametros
- Eliminacion del campo nombreUsuario para Usuario
- Añadida una lista de usuarios para los usuarios guardados en el
  cliente HTTP
- Añadida una ventana de confirmacion para cada modificacion de la base
  de datos
(#17 , #24)

--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -50,6 +50,7 @@
     </div>
 
 </form>
+<!--<a th:href="@{/empleados/logout}" class="btn">Volver al inicio</a>-->
 
 <script th:inline="javascript" >
     function confirmarAccionFormulario(formulario, mensaje) {
