add: Funcionalidades en autenticacion por pasos
- Cookie añadida para recordar usuario desconectado de manera abrupta
- Añadido tiempo hasta el desbloqueo de la cuenta
- Añadidos los parametros de bloqueo de cuenta a la tabla Parametros
- Corregidos mensajes de error relacionados con el bloqueo de cuenta

(#17)

--- a/empleados/src/main/resources/templates/autenticacionPorPasos.html
+++ b/empleados/src/main/resources/templates/autenticacionPorPasos.html
@@ -192,7 +192,7 @@
 
     // Función eliminar (revisada para asegurar que funciona)
     function eliminarUsuarioSeleccionado() {
-        const select = document.getElementById('previousLoginsSelect'); // Re-obtener por si acaso
+        const select = document.getElementById('loginsAnterioresSelect'); // Re-obtener por si acaso
         if (!select || !select.value) {
             alert("Por favor, selecciona un usuario de la lista para eliminar.");
             return;
